# swings

./: .dockerignore  .env.example  .forensics-prompt.md  .gitignore  .mcp.json  .neon  .prettierignore  .sqlfluff  .trivyignore  .vercelignore  AGENTS.md  AUDIT.md  AUDIT_FIX_PLAN.md  AUDIT_PHASE1_RECON.md  AUDIT_PHASE2_GAPS.md  AUDIT_PHASE3_PLAN.md  AUDIT_REPORT.md  AUDIT_RESPONSE.md  BACKEND-AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  EXPLOSIVE-SWINGS-LANDING-PAGE-PROMPT.md  FDN-TESTHARNESS-WIRING.md  LICENSE  OBSERVABILITY-WIRING.md  README.md  REPO_STATE.md  SECURITY.md  SEO_RUNBOOK.md  TODO_AUDIT.md  dashboard-files  deployment-guide.md  docker-compose.yml  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  project-audit.md  railway.toml  (+8 more)
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: .env.example  .gitignore  .sqlfluffignore  BACKEND-AUDIT-REPORT.md  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml  docker-compose.yml  nixpacks.toml  railway.toml  render.yaml
backend/.cargo/: audit.toml
backend/examples/: openapi_gen.rs
backend/migrations/: 001_initial.sql  002_blog.sql  003_password_resets.sql  004_media_title.sql  005_user_author_profile.sql  006_post_format.sql  007_post_meta.sql  008_media_focal.sql  009_analytics.sql  010_normalize_user_emails.sql  011_courses.sql  012_pricing_plans.sql  013_coupons.sql  014_analytics_enhanced.sql  015_popups.sql  016_blog_trash_meta.sql  017_webhook_idempotency.sql  018_refresh_token_families.sql  019_outbox.sql  020_notifications.sql  021_rbac.sql  022_rate_limits.sql  023_webhook_source.sql  024_consent.sql  025_consent_log.sql  026_consent_regions.sql  027_forms.sql  028_consent_integrity.sql  030_products.sql  031_cart.sql  032_form_partials.sql  033_form_uploads.sql  034_form_payments.sql  035_orders.sql  036_tax.sql  037_user_downloads.sql  038_product_search.sql  039_addresses.sql  041_coupons_refactor.sql  041_subscriptions_v2.sql  (+44 more)
backend/src/: authz.rs  config.rs  crypto.rs  db.rs  email.rs  error.rs  extractors.rs  lib.rs  main.rs  middleware.rs  models.rs  openapi.rs  stripe_api.rs
backend/src/commerce/: billing.rs  cart.rs  catalog.rs  checkout.rs  coupons.rs  disputes.rs  downloads.rs  memberships.rs  mod.rs  orders.rs  products.rs  refunds.rs  repo.rs  reports.rs  subscriptions.rs  tax.rs  webhook_audit.rs
backend/src/common/: geo.rs  html.rs  mod.rs  money.rs  password.rs  ua.rs
backend/src/consent/: dsar_export.rs  geo.rs  integrity.rs  mod.rs  records.rs  repo.rs
backend/src/events/: dispatcher.rs  mod.rs  outbox.rs  worker.rs
backend/src/events/handlers/: digital_delivery.rs  mod.rs  notify.rs  popup_attribution.rs  webhook_out.rs
backend/src/forms/: antispam.rs  geo.rs  integration_config.rs  integrations.rs  logic.rs  mod.rs  payment.rs  repo.rs  schema.rs  uploads.rs  validation.rs
backend/src/handlers/: admin.rs  admin_audit.rs  admin_consent.rs  admin_dsar.rs  admin_impersonation.rs  admin_ip_allowlist.rs  admin_members.rs  admin_orders.rs  admin_roles.rs  admin_security.rs  admin_settings.rs  admin_subscriptions.rs  analytics.rs  auth.rs  blog.rs  cart.rs  catalog.rs  consent.rs  coupons.rs  courses.rs  csp_report.rs  forms.rs  health.rs  member.rs  mod.rs  notifications.rs  outbox.rs  popups.rs  pricing.rs  products.rs  webhooks.rs
backend/src/middleware/: admin_ip_allowlist.rs  idempotency.rs  impersonation_banner.rs  maintenance_mode.rs  rate_limit.rs
backend/src/notifications/: mod.rs  preferences.rs  send.rs  suppression.rs  templates.rs  unsubscribe.rs
backend/src/notifications/channels/: discord.rs  email.rs  in_app.rs  mod.rs  push.rs  slack.rs  sms.rs  webhook.rs
backend/src/notifications/channels/email/: lettre_provider.rs  noop_provider.rs  resend_provider.rs
backend/src/notifications/webhooks/: mod.rs  resend.rs
backend/src/observability/: correlation.rs  handler.rs  metrics.rs  mod.rs  tracing_json.rs
backend/src/pdf/: invoice.rs  mod.rs
backend/src/popups/: attribution.rs  content.rs  content_locker.rs  countdown.rs  frequency.rs  gamified.rs  mod.rs  repo.rs  significance.rs  targeting.rs  variants.rs
backend/src/security/: impersonation.rs  ip_allowlist.rs  mod.rs
backend/src/services/: audit.rs  audit_retention.rs  blog_scheduler.rs  dsar_admin.rs  dsar_artifact_sweep.rs  dsar_worker.rs  idempotency_gc.rs  mod.rs  pricing_rollout.rs  storage.rs
backend/src/settings/: crypto.rs  mod.rs
backend/tests/: admin_audit.rs  admin_blog_post_autosave.rs  admin_blog_post_update.rs  admin_coupons_create.rs  admin_coupons_stats.rs  admin_dashboard_stats.rs  admin_dsar.rs  admin_idempotency.rs  admin_impersonation.rs  admin_ip_allowlist.rs  admin_members.rs  admin_members_lifecycle.rs  admin_mutation_ratelimit.rs  admin_orders.rs  admin_popups_analytics.rs  admin_roles.rs  admin_security.rs  admin_settings.rs  admin_subscriptions.rs  audit_retention.rs  auth_cookies.rs  auth_membership.rs  authz_matrix.rs  course_access_gates.rs  dsar_artifact_sweep.rs  dsar_async_export.rs  dsar_r2_artifact.rs  example_auth_flow.rs  idempotency_cookie_carry.rs  idempotency_gc.rs  idempotency_legacy_handlers.rs  lifecycle_revocation.rs  member_orders.rs  member_payment_methods.rs  member_profile_address.rs  member_self_service.rs  member_subscriptions.rs  member_subscriptions_stripe.rs  notifications.rs  observability.rs  (+9 more)
backend/tests/snapshots/: openapi.json
backend/tests/support/: app.rs  db.rs  error.rs  mod.rs  response.rs  user.rs
docs/: ADMIN_TODO.md  DEPLOYMENT.md  INFRASTRUCTURE.md  README.md  REMAINING-WORK.md  RUNBOOK.md  SECRETS-PRIMER.md  SEO_RUNBOOK.md  STRIPE-E2E-QA.md  STRIPE-E2E-RESULTS-2026-05-01.md  ci.md  google-tracking-setup-guide.md  stripe-local-testing.md  stripe-pricing-models.md
e2e/: README.md  smoke.spec.ts
forensic-audit/: 00-INDEX.md
messages/: ar.json  cs.json  da.json  de.json  en.json  es.json  fi.json  fr.json  it.json  ja.json  ko.json  nb.json  nl.json  pl.json  pt-BR.json  sv.json  zh-Hans.json  zh-Hant.json
ops/: README.md
scripts/: seo-audit.mjs  (+5 more)
(+379 files in other folders)
