[package]
name = "swings-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate", "json", "rust_decimal"] }

# Auth
jsonwebtoken = "10"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
hmac = "0.12"
validator = { version = "0.20", features = ["derive"] }

# Stripe
stripe-rust = { package = "async-stripe", version = "0.39", features = ["runtime-tokio-hyper"] }

# Blog / Media
axum_typed_multipart = "0.16"
tempfile = "3"
sanitize-filename = "0.6"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport", "tokio1"] }
tera = "1"
rand = "0.8"

# Decimal
rust_decimal = { version = "1", features = ["serde-with-str"] }

# R2 (S3 API)
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "rustls"] }
bytes = "1"

# Rate limiting
governor = "0.10"
tower_governor = "0.8"
