[package]
name = "swings-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
# `time` is a transitive of the `cookie` crate (via `axum-extra`), promoted to a
# direct dependency so the BFF auth-cookie helpers can construct `Max-Age`
# values typed as `time::Duration` without piggy-backing on the unstable
# `cookie::time` re-export path.
time = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate", "json", "rust_decimal"] }

# Auth
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs", "use_pem"] }
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
hmac = "0.12"
validator = { version = "0.20", features = ["derive"] }

# Stripe
stripe-rust = { package = "async-stripe", version = "0.39", features = ["runtime-tokio-hyper"] }

# Blog / Media
axum_typed_multipart = "0.16"
tempfile = "3"
sanitize-filename = "0.6"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport", "tokio1"] }
tera = "1"
rand = "0.8"
# Resend provider HTTP client. Using `reqwest` directly (rather than `resend-rs`)
# keeps the dependency tree narrow: rustls-only TLS, JSON body builder, no
# default-features OpenSSL pull. async-trait only lands because the provider
# trait returns `async fn` — without it the trait is not object-safe.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
async-trait = "0.1"

# Decimal
rust_decimal = { version = "1", features = ["serde-with-str"] }

# FORM-02: validation engine dependencies. `regex` for `pattern` rules,
# `url` for `url` format parsing, both already transitively in the tree so
# the build is cheap.
regex = "1"
url = "2"

# R2 (S3 API)
aws-sdk-s3 = { version = "1.120", default-features = false, features = ["rt-tokio", "default-https-client"] }
bytes = "1"

# FORM-05: magic-number MIME sniffing on the first 512 B of an upload.
# Pure-Rust, no build script — rejects spoofed Content-Types before the
# bytes hit storage.
infer = { version = "0.19", default-features = false }

# FORM-07: AES-GCM envelope encryption for per-form integration credentials.
# Pure-Rust AEAD from the RustCrypto tree.
aes-gcm = "0.10"
base64 = "0.22"

# Rate limiting
governor = "0.10"
tower_governor = "0.8"

# Geo (GeoLite2-Country reader)
# Pinned to ≥0.27 to pick up RUSTSEC-2025-0132 fix (Reader::open_mmap
# soundness). We use open_readfile (Vec<u8>), but the crate-level advisory
# still requires the version bump. 0.27 introduces the LookupResult API
# — see `src/common/geo.rs` for the migration.
maxminddb = "0.27"

# User-agent parsing + cache
woothee = "0.13"
moka = { version = "0.12", features = ["sync"] }

# HTML sanitization
ammonia = "4"

# OpenAPI (FDN-02)
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid", "preserve_order"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Observability (Phase 4 follow-on to FDN-08)
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# EC-06: PDF invoice / receipt / credit-note generation. `printpdf` is pure
# Rust, has no system deps, and ships with its own Helvetica subset so we do
# not need to bundle a TTF for first-line invoices.
printpdf = "0.7"

[dev-dependencies]
# Mock HTTP server for provider tests. Pinned to 0.6 (hyper 1 / rustls) to
# match reqwest 0.12's transport stack so the TLS runtime doesn't fork.
wiremock = "0.6"

# ──────────────────────────────────────────────────────────────────────────
# Release profile
#
# We ship a single static binary to production, so CPU-time-at-runtime and
# container image size both matter more than compile time. The settings
# below are the pragmatic-but-safe defaults used across the Rust server
# ecosystem (Ruff, Tokio examples, axum production templates):
#
#   * `lto = "thin"`    — ~5-15 % runtime speedup on typical axum workloads
#                         with a far smaller compile-time hit than "fat".
#   * `codegen-units=1` — lets the optimiser see the whole crate graph at
#                         once. Combined with thin LTO this is the top-end
#                         of what's worth doing before tuning PGO.
#   * `strip = "symbols"` — removes debug symbols from the final binary
#                         (~30-50 % size reduction on release builds).
#                         `panic = "abort"` would be the next step but we
#                         intentionally keep unwind so axum error handlers
#                         can surface a 500 and keep the process alive.
#   * `opt-level = 3`   — default for release, called out here so the intent
#                         is obvious on a drive-by read.
#   * `overflow-checks = false` — default for release; numerics in hot paths
#                         are expected to use `checked_*` / `saturating_*`
#                         explicitly when overflow is a real concern.
# ──────────────────────────────────────────────────────────────────────────
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false
overflow-checks = false

# Keep the `dev` profile fast; we only spend compile budget on release.
[profile.dev]
opt-level = 0
debug = true

# `ci` profile: used by `cargo test --profile ci` to get release-like
# behaviour without the full LTO wait. Opt-level 1 is the sweet spot for
# test runs that need to exercise real code paths (e.g. argon2 timing,
# sqlx prepared-statement codegen) without blowing the CI budget.
[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 1
debug = false
